# cpp-executable-template

./: CMakeLIsts.txt  CMakeLists.txt
src/: main.cpp
